cmake_minimum_required(VERSION 3.12)
project(gv343_game_section2)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)
include_directories(SFML)
include_directories(SFML/Audio)
include_directories(SFML/Graphics)
include_directories(SFML/Network)
include_directories(SFML/System)
include_directories(SFML/Window)
include_directories(SFML-2.5.0/include)
include_directories(SFML-2.5.0/include/SFML)
include_directories(SFML-2.5.0/include/SFML/Audio)
include_directories(SFML-2.5.0/include/SFML/Graphics)
include_directories(SFML-2.5.0/include/SFML/Network)
include_directories(SFML-2.5.0/include/SFML/System)
include_directories(SFML-2.5.0/include/SFML/Window)
include_directories(SFML-2.5.0/share/SFML/examples/shader)

add_executable(gv343_game_section2
        include/Collision.hpp
        include/Game.hpp
        include/Monster.hpp
        include/Person.hpp
        include/Settings.hpp
        SFML/Audio/AlResource.hppq
        SFML/Audio/Export.hpp
        SFML/Audio/InputSoundFile.hpp
        SFML/Audio/Listener.hpp
        SFML/Audio/Music.hpp
        SFML/Audio/OutputSoundFile.hpp
        SFML/Audio/Sound.hpp
        SFML/Audio/SoundBuffer.hpp
        SFML/Audio/SoundBufferRecorder.hpp
        SFML/Audio/SoundFileFactory.hpp
        SFML/Audio/SoundFileFactory.inl
        SFML/Audio/SoundFileReader.hpp
        SFML/Audio/SoundFileWriter.hpp
        SFML/Audio/SoundRecorder.hpp
        SFML/Audio/SoundSource.hpp
        SFML/Audio/SoundStream.hpp
        SFML/Graphics/BlendMode.hpp
        SFML/Graphics/CircleShape.hpp
        SFML/Graphics/Color.hpp
        SFML/Graphics/ConvexShape.hpp
        SFML/Graphics/Drawable.hpp
        SFML/Graphics/Export.hpp
        SFML/Graphics/Font.hpp
        SFML/Graphics/Glsl.hpp
        SFML/Graphics/Glsl.inl
        SFML/Graphics/Glyph.hpp
        SFML/Graphics/Image.hpp
        SFML/Graphics/PrimitiveType.hpp
        SFML/Graphics/Rect.hpp
        SFML/Graphics/Rect.inl
        SFML/Graphics/RectangleShape.hpp
        SFML/Graphics/RenderStates.hpp
        SFML/Graphics/RenderTarget.hpp
        SFML/Graphics/RenderTexture.hpp
        SFML/Graphics/RenderWindow.hpp
        SFML/Graphics/Shader.hpp
        SFML/Graphics/Shape.hpp
        SFML/Graphics/Sprite.hpp
        SFML/Graphics/Text.hpp
        SFML/Graphics/Texture.hpp
        SFML/Graphics/Transform.hpp
        SFML/Graphics/Transformable.hpp
        SFML/Graphics/Vertex.hpp
        SFML/Graphics/VertexArray.hpp
        SFML/Graphics/VertexBuffer.hpp
        SFML/Graphics/View.hpp
        SFML/Network/Export.hpp
        SFML/Network/Ftp.hpp
        SFML/Network/Http.hpp
        SFML/Network/IpAddress.hpp
        SFML/Network/Packet.hpp
        SFML/Network/Socket.hpp
        SFML/Network/SocketHandle.hpp
        SFML/Network/SocketSelector.hpp
        SFML/Network/TcpListener.hpp
        SFML/Network/TcpSocket.hpp
        SFML/Network/UdpSocket.hpp
        SFML/System/Clock.hpp
        SFML/System/Err.hpp
        SFML/System/Export.hpp
        SFML/System/FileInputStream.hpp
        SFML/System/InputStream.hpp
        SFML/System/Lock.hpp
        SFML/System/MemoryInputStream.hpp
        SFML/System/Mutex.hpp
        SFML/System/NativeActivity.hpp
        SFML/System/NonCopyable.hpp
        SFML/System/Sleep.hpp
        SFML/System/String.hpp
        SFML/System/String.inl
        SFML/System/Thread.hpp
        SFML/System/Thread.inl
        SFML/System/ThreadLocal.hpp
        SFML/System/ThreadLocalPtr.hpp
        SFML/System/ThreadLocalPtr.inl
        SFML/System/Time.hpp
        SFML/System/Utf.hpp
        SFML/System/Utf.inl
        SFML/System/Vector2.hpp
        SFML/System/Vector2.inl
        SFML/System/Vector3.hpp
        SFML/System/Vector3.inl
        SFML/Window/Clipboard.hpp
        SFML/Window/Context.hpp
        SFML/Window/ContextSettings.hpp
        SFML/Window/Cursor.hpp
        SFML/Window/Event.hpp
        SFML/Window/Export.hpp
        SFML/Window/GlResource.hpp
        SFML/Window/Joystick.hpp
        SFML/Window/Keyboard.hpp
        SFML/Window/Mouse.hpp
        SFML/Window/Sensor.hpp
        SFML/Window/Touch.hpp
        SFML/Window/VideoMode.hpp
        SFML/Window/Window.hpp
        SFML/Window/WindowHandle.hpp
        SFML/Window/WindowStyle.hpp
        SFML/Audio.hpp
        SFML/Config.hpp
        SFML/GpuPreference.hpp
        SFML/Graphics.hpp
        SFML/Main.hpp
        SFML/Network.hpp
        SFML/OpenGL.hpp
        SFML/System.hpp
        SFML/Window.hpp
        SFML-2.5.0/include/SFML/Audio/AlResource.hpp
        SFML-2.5.0/include/SFML/Audio/Export.hpp
        SFML-2.5.0/include/SFML/Audio/InputSoundFile.hpp
        SFML-2.5.0/include/SFML/Audio/Listener.hpp
        SFML-2.5.0/include/SFML/Audio/Music.hpp
        SFML-2.5.0/include/SFML/Audio/OutputSoundFile.hpp
        SFML-2.5.0/include/SFML/Audio/Sound.hpp
        SFML-2.5.0/include/SFML/Audio/SoundBuffer.hpp
        SFML-2.5.0/include/SFML/Audio/SoundBufferRecorder.hpp
        SFML-2.5.0/include/SFML/Audio/SoundFileFactory.hpp
        SFML-2.5.0/include/SFML/Audio/SoundFileFactory.inl
        SFML-2.5.0/include/SFML/Audio/SoundFileReader.hpp
        SFML-2.5.0/include/SFML/Audio/SoundFileWriter.hpp
        SFML-2.5.0/include/SFML/Audio/SoundRecorder.hpp
        SFML-2.5.0/include/SFML/Audio/SoundSource.hpp
        SFML-2.5.0/include/SFML/Audio/SoundStream.hpp
        SFML-2.5.0/include/SFML/Graphics/BlendMode.hpp
        SFML-2.5.0/include/SFML/Graphics/CircleShape.hpp
        SFML-2.5.0/include/SFML/Graphics/Color.hpp
        SFML-2.5.0/include/SFML/Graphics/ConvexShape.hpp
        SFML-2.5.0/include/SFML/Graphics/Drawable.hpp
        SFML-2.5.0/include/SFML/Graphics/Export.hpp
        SFML-2.5.0/include/SFML/Graphics/Font.hpp
        SFML-2.5.0/include/SFML/Graphics/Glsl.hpp
        SFML-2.5.0/include/SFML/Graphics/Glsl.inl
        SFML-2.5.0/include/SFML/Graphics/Glyph.hpp
        SFML-2.5.0/include/SFML/Graphics/Image.hpp
        SFML-2.5.0/include/SFML/Graphics/PrimitiveType.hpp
        SFML-2.5.0/include/SFML/Graphics/Rect.hpp
        SFML-2.5.0/include/SFML/Graphics/Rect.inl
        SFML-2.5.0/include/SFML/Graphics/RectangleShape.hpp
        SFML-2.5.0/include/SFML/Graphics/RenderStates.hpp
        SFML-2.5.0/include/SFML/Graphics/RenderTarget.hpp
        SFML-2.5.0/include/SFML/Graphics/RenderTexture.hpp
        SFML-2.5.0/include/SFML/Graphics/RenderWindow.hpp
        SFML-2.5.0/include/SFML/Graphics/Shader.hpp
        SFML-2.5.0/include/SFML/Graphics/Shape.hpp
        SFML-2.5.0/include/SFML/Graphics/Sprite.hpp
        SFML-2.5.0/include/SFML/Graphics/Text.hpp
        SFML-2.5.0/include/SFML/Graphics/Texture.hpp
        SFML-2.5.0/include/SFML/Graphics/Transform.hpp
        SFML-2.5.0/include/SFML/Graphics/Transformable.hpp
        SFML-2.5.0/include/SFML/Graphics/Vertex.hpp
        SFML-2.5.0/include/SFML/Graphics/VertexArray.hpp
        SFML-2.5.0/include/SFML/Graphics/VertexBuffer.hpp
        SFML-2.5.0/include/SFML/Graphics/View.hpp
        SFML-2.5.0/include/SFML/Network/Export.hpp
        SFML-2.5.0/include/SFML/Network/Ftp.hpp
        SFML-2.5.0/include/SFML/Network/Http.hpp
        SFML-2.5.0/include/SFML/Network/IpAddress.hpp
        SFML-2.5.0/include/SFML/Network/Packet.hpp
        SFML-2.5.0/include/SFML/Network/Socket.hpp
        SFML-2.5.0/include/SFML/Network/SocketHandle.hpp
        SFML-2.5.0/include/SFML/Network/SocketSelector.hpp
        SFML-2.5.0/include/SFML/Network/TcpListener.hpp
        SFML-2.5.0/include/SFML/Network/TcpSocket.hpp
        SFML-2.5.0/include/SFML/Network/UdpSocket.hpp
        SFML-2.5.0/include/SFML/System/Clock.hpp
        SFML-2.5.0/include/SFML/System/Err.hpp
        SFML-2.5.0/include/SFML/System/Export.hpp
        SFML-2.5.0/include/SFML/System/FileInputStream.hpp
        SFML-2.5.0/include/SFML/System/InputStream.hpp
        SFML-2.5.0/include/SFML/System/Lock.hpp
        SFML-2.5.0/include/SFML/System/MemoryInputStream.hpp
        SFML-2.5.0/include/SFML/System/Mutex.hpp
        SFML-2.5.0/include/SFML/System/NativeActivity.hpp
        SFML-2.5.0/include/SFML/System/NonCopyable.hpp
        SFML-2.5.0/include/SFML/System/Sleep.hpp
        SFML-2.5.0/include/SFML/System/String.hpp
        SFML-2.5.0/include/SFML/System/String.inl
        SFML-2.5.0/include/SFML/System/Thread.hpp
        SFML-2.5.0/include/SFML/System/Thread.inl
        SFML-2.5.0/include/SFML/System/ThreadLocal.hpp
        SFML-2.5.0/include/SFML/System/ThreadLocalPtr.hpp
        SFML-2.5.0/include/SFML/System/ThreadLocalPtr.inl
        SFML-2.5.0/include/SFML/System/Time.hpp
        SFML-2.5.0/include/SFML/System/Utf.hpp
        SFML-2.5.0/include/SFML/System/Utf.inl
        SFML-2.5.0/include/SFML/System/Vector2.hpp
        SFML-2.5.0/include/SFML/System/Vector2.inl
        SFML-2.5.0/include/SFML/System/Vector3.hpp
        SFML-2.5.0/include/SFML/System/Vector3.inl
        SFML-2.5.0/include/SFML/Window/Clipboard.hpp
        SFML-2.5.0/include/SFML/Window/Context.hpp
        SFML-2.5.0/include/SFML/Window/ContextSettings.hpp
        SFML-2.5.0/include/SFML/Window/Cursor.hpp
        SFML-2.5.0/include/SFML/Window/Event.hpp
        SFML-2.5.0/include/SFML/Window/Export.hpp
        SFML-2.5.0/include/SFML/Window/GlResource.hpp
        SFML-2.5.0/include/SFML/Window/Joystick.hpp
        SFML-2.5.0/include/SFML/Window/Keyboard.hpp
        SFML-2.5.0/include/SFML/Window/Mouse.hpp
        SFML-2.5.0/include/SFML/Window/Sensor.hpp
        SFML-2.5.0/include/SFML/Window/Touch.hpp
        SFML-2.5.0/include/SFML/Window/VideoMode.hpp
        SFML-2.5.0/include/SFML/Window/Window.hpp
        SFML-2.5.0/include/SFML/Window/WindowHandle.hpp
        SFML-2.5.0/include/SFML/Window/WindowStyle.hpp
        SFML-2.5.0/include/SFML/Audio.hpp
        SFML-2.5.0/include/SFML/Config.hpp
        SFML-2.5.0/include/SFML/GpuPreference.hpp
        SFML-2.5.0/include/SFML/Graphics.hpp
        SFML-2.5.0/include/SFML/Main.hpp
        SFML-2.5.0/include/SFML/Network.hpp
        SFML-2.5.0/include/SFML/OpenGL.hpp
        SFML-2.5.0/include/SFML/System.hpp
        SFML-2.5.0/include/SFML/Window.hpp
        SFML-2.5.0/share/SFML/examples/ftp/Ftp.cpp
        SFML-2.5.0/share/SFML/examples/island/Island.cpp
        SFML-2.5.0/share/SFML/examples/joystick/Joystick.cpp
        SFML-2.5.0/share/SFML/examples/opengl/OpenGL.cpp
        SFML-2.5.0/share/SFML/examples/pong/Pong.cpp
        SFML-2.5.0/share/SFML/examples/shader/Effect.hpp
        SFML-2.5.0/share/SFML/examples/shader/Shader.cpp
        SFML-2.5.0/share/SFML/examples/sockets/Sockets.cpp
        SFML-2.5.0/share/SFML/examples/sockets/TCP.cpp
        SFML-2.5.0/share/SFML/examples/sockets/UDP.cpp
        SFML-2.5.0/share/SFML/examples/sound/Sound.cpp
        SFML-2.5.0/share/SFML/examples/sound-capture/SoundCapture.cpp
        SFML-2.5.0/share/SFML/examples/voip/Client.cpp
        SFML-2.5.0/share/SFML/examples/voip/Server.cpp
        SFML-2.5.0/share/SFML/examples/voip/VoIP.cpp
        SFML-2.5.0/share/SFML/examples/window/Window.cpp
        SFML-2.5.0/share/SFML/examples/X11Example/X11.cpp
        Collision.cpp
        Game.cpp
        main.cpp
        Monster.cpp
        Person.cpp)
